<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:labelFor="@id/title_input"
            android:text="@string/titleTextView"
            android:textColor="@color/secondary_text_material_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="16dp"
            android:labelFor="@id/description_input"
            android:text="@string/descriptionTextView"
            android:textColor="@color/secondary_text_material_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_input" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/submitTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:backgroundTint="@color/weldonBlue"
            android:contentDescription="@string/submitContentDescription"
            android:src="@drawable/ic_baseline_check_24"
            android:text="@string/submitTask"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/weldonBlue"
            android:contentDescription="@string/deleteContentDescription"
            android:src="@drawable/ic_baseline_delete_forever_24"
            android:text="@string/deleteButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/addLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/triggerOnExitInput" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:labelFor="@id/distanceInput"
            android:text="@string/triggerDistanceText"
            android:textColor="@color/secondary_text_material_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/taskDescription"
            app:layout_constraintTop_toBottomOf="@+id/description_input" />

        <EditText
            android:id="@+id/distanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceTextView"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/maxSpeedEnabledInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:checked="false"
            android:text="@string/triggerSpeedText"
            android:textColor="@color/secondary_text_material_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/distanceTextView"
            app:layout_constraintTop_toBottomOf="@+id/distanceInput" />

        <SeekBar
            android:id="@+id/maxSpeedInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:max="@integer/speed_max"
            android:paddingTop="2dip"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/maxSpeedValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxSpeedEnabledInput" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/triggerOnExitInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:checked="false"
            android:text="@string/triggerOnExitText"
            android:textColor="@color/secondary_text_material_light"
            app:layout_constraintStart_toStartOf="@+id/maxSpeedEnabledInput"
            app:layout_constraintTop_toBottomOf="@+id/maxSpeedInput" />

        <TextView
            android:id="@+id/maxSpeedValue"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxSpeedEnabledInput"
            tools:text="100" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>